snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.md5
3610e45a3f69c52f7e6ce77b338a1ec2